test/parser/should_fail/expr3.souc.bad
import important

main() = do
	print @uhcruelue@
end main
